# PCSX2-ARMSX2-to-BionicSX2-

./: README.md  README_iOS.md  bridge_full.txt  bridge_interface.txt  core_bridge.txt  jni_short.txt  native_methods.txt
.github/workflows/: build_ios.yml
ARMSX2/: .gitignore  .gitmodules
ARMSX2/app/src/main/cpp/cmake/: BuildParameters.cmake  Pcsx2Utils.cmake  SearchForStuff.cmake  TargetArch.cmake
ARMSX2/app/src/main/cpp/common/: Pcsx2Defs.h
ARMSX2/app/src/main/cpp/pcsx2/: Achievements.cpp  VMManager.cpp
ARMSX2/app/src/main/cpp/pcsx2/ImGui/: ImGuiOverlays.cpp
ARMSX2/app/src/main/java/kr/co/iefriends/pcsx2/utils/: DataDirectoryManager.java
ARMSX2/app/src/main/res/drawable/: ic_settings_24.xml  ic_view_grid_24.xml  ic_view_list_24.xml
ARMSX2/app/src/main/res/values/: themes.xml
ARMSX2/ios/: CMakeLists.txt  ExportOptions.plist  ios.toolchain.cmake
ARMSX2/ios/ARMSX2/: Armsx2Bridge.h  Armsx2Bridge.m  Bridging-Header.h
ARMSX2/ios/cmake/: ios.toolchain.cmake
